--- a/EmpowerFelixW_1/EmpowerFelixW_1.csproj
+++ b/EmpowerFelixW_1/EmpowerFelixW_1.csproj
@@ -49,6 +49,9 @@
     <Compile Include="EmpowerFelixW_1.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Skyline.DataMiner.Core.DataMinerSystem.Automation">
+      <Version>1.1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Skyline.DataMiner.Dev.Automation">
       <Version>10.3.3.1</Version>
     </PackageReference>
